# simple-todo-app

./: .gitignore  manage.py  manifest.json  package.json  pyproject.toml  webpack.config.js
.run/: Flask (runserver.py).run.xml
app/: __init__.py  config.py  models.py  routes.py
app/static/src/js/: actions.js  api.js  index.js  reducers.js  store.js
app/static/src/js/components/: error.component.js  todo-list.component.js  todo.component.js
app/static/src/js/forms/: login.form.js  signup.form.js  todo.form.js
app/static/src/scss/: styles.scss
app/templates/: index.html
app/tests/: conftest.py  test_models.py  test_routes.py
migrations/: 2020_06_01_014509_create_users_table.py  2020_06_01_015115_create_todos_table.py
