[tool.poetry]
name = "simple-todo-app"
version = "0.1.0"
description = ""
authors = ["abdul hamid <abdulachik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
Flask-Static-Digest = "^0.1.3"
orator = "^0.9.9"
flask-orator = "^0.2.0"
python-dotenv = "^0.13.0"
pytest = "^5.4.2"
Flask-Classful = "^0.14.2"
flask-login = "^0.5.0"
flask-bcrypt = "^0.7.1"
pytest-flask = "^1.0.0"
pytest-cov = "^2.9.0"
flask-jwt-extended = "^3.24.1"
flask-webpack = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
